--- a/src/app/links/links.module.scss
+++ b/src/app/links/links.module.scss
@@ -6,11 +6,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 60px auto 60px auto;
+  margin: 50px auto 60px auto;
 
   h1 {
     font-family: var(--font-mynerve);
     padding: 20px;
+    font-size: 32px;
+    text-align: center;
+  }
+
+  @media screen and (max-width: 1024px) {
+    margin: 20px auto;
+
+    h1 {
+      font-size: 24px;
+    }
   }
 }
 
@@ -59,7 +69,7 @@
     }
 
     @media screen and (max-width: 768px) {
-      width: 85%;
+      width: 90%;
       padding: 0px 0px 0px 10px;
 
       h3 {
@@ -114,7 +124,7 @@
     }
 
     @media screen and (max-width: 768px) {
-      width: 85%;
+      width: 90%;
       padding: 0px 0px 0px 10px;
 
       h3 {
